# jard

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  architecture.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: app.js  index.html  scanner.html  style.css
samples/: products.csv
src/: lib.rs  main.rs
src/api/: mod.rs
src/infra/: db.rs
tests/: api_tests.rs
