[package]
name = "jard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Jard: The Zero-Hardware Barcode Bridge."
license = "MIT"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Network & Assets
local-ip-address = "0.6"
mime_guess = "2.0" # For serving embedded assets
rust-embed = { version = "8.3", features = ["interpolate-folder-path"] }
open = "5.1" # To automatically open the browser

# Data Store
dashmap = "6.0"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
dotenvy = "0.15"
rand = "0.8"
serde_urlencoded = "0.7"

# Exporting
rust_xlsxwriter = "0.76"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
